expected/main/gens/bitdataops-neg2.err
ERROR: "actual/main/gens/bitdataops-neg2.lc", line 5
external uNot {primBitdataNot U} :: U -> U
         ^
No generated implementation: Bitdata type U contains junk

ERROR: "actual/main/gens/bitdataops-neg2.lc", line 6
external uAnd {primBitdataAnd U} :: U -> U -> U
         ^
No generated implementation: Bitdata type U contains junk

ERROR: "actual/main/gens/bitdataops-neg2.lc", line 7
external uOr  {primBitdataOr  U} :: U -> U -> U
         ^
No generated implementation: Bitdata type U contains junk

ERROR: "actual/main/gens/bitdataops-neg2.lc", line 8
external uXor {primBitdataXor U} :: U -> U -> U
         ^
No generated implementation: Bitdata type U contains junk

ERROR: Aborting after 4 previously reported errors

